Work on email data generation

--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,12 @@
     *:before {
       box-sizing: border-box;
     }
+
+    html,
+    body,
+    #root {
+      height: 100%;
+    }
   </style>
 </head>
 
